# nois

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: SetupConfigs.cmake
examples/: CMakeLists.txt  README.md
examples/common/versio/include/: umm_malloc_cfgport.h
examples/common/vst3/: CMakeLists.txt
examples/common/vst3/include/: NoisVst3Parameter.hpp  NoisVst3Processor.hpp  NoisVst3Processor.inl
examples/common/vst3/src/: NoisVst3.cpp
examples/nois-distort/vst3/: CMakeLists.txt  README.md
examples/nois-distort/vst3/src/: NoisVst3Factory.cpp  NoisVst3Parameter.cpp  NoisVst3Parameter.hpp  NoisVst3Plugin.cpp  NoisVst3Plugin.hpp  Vst3Distort.cpp
examples/nois-stretch/versio/: CMakeLists.txt  Makefile
examples/nois-stretch/versio/src/: VersioStretch.cpp
examples/nois-stretch/vst3/: CMakeLists.txt  README.md
examples/nois-stretch/vst3/src/: NoisVst3Factory.cpp  NoisVst3Parameter.hpp  NoisVst3Plugin.cpp  NoisVst3Plugin.hpp  Vst3Stretch.cpp
examples/verb/vst3/: CMakeLists.txt  README.md
examples/verb/vst3/src/: NoisVst3Factory.cpp  NoisVst3Plugin.cpp  NoisVst3Plugin.hpp  Vst3Verb.cpp
include/nois/: Nois.hpp  NoisChannel.hpp  NoisConfig.hpp  NoisGainer.hpp  NoisMacros.hpp  NoisMixer.hpp  NoisStream.hpp  NoisTypes.hpp  NoisUtil.hpp
include/nois/analysis/: NoisFilterBank.hpp  NoisPitchDetector.hpp
include/nois/core/: NoisBuffer.hpp  NoisChannel.hpp  NoisDestination.hpp  NoisParameter.hpp  NoisRegistry.hpp  NoisRingBuffer.hpp  NoisSource.hpp  NoisStream.hpp
include/nois/dynamic/: NoisCompressor.hpp  NoisExpander.hpp  NoisTransientShaper.hpp
include/nois/effect/: NoisDistorter.hpp  NoisFilter.hpp  NoisGainer.hpp  NoisReverb.hpp  NoisSignalDelayer.hpp  NoisTimeStretcher.hpp
include/nois/math/: NoisMatrix.hpp  NoisMatrixAvx.inl
include/nois/memory/: NoisAllocator.hpp
include/nois/midi/: NoisMidiBuffer.hpp  NoisMidiStream.hpp
include/nois/osc/: NoisOsc.hpp
include/nois/parameter/: NoisParameter.hpp
include/nois/route/: NoisCombiner.hpp  NoisMixer.hpp  NoisSplitter.hpp
include/nois/util/: NoisBiquad.hpp  NoisDelay.hpp  NoisSmallVector.hpp  NoisSpanAllocator.hpp
src/: NoisGainer.cpp  NoisLog.h  NoisMacros.hpp  NoisMixer.cpp  NoisPrefix.pch
src/analysis/: NoisFilterBank.cpp  NoisPitchDetector.cpp
src/core/: NoisChannel.cpp  NoisParameter.cpp
src/dynamic/: NoisCompressor.cpp  NoisExpander.cpp  NoisTransientShaper.cpp
src/effect/: NoisDistorter.cpp  NoisFilter.cpp  NoisGainer.cpp  NoisReverb.cpp  NoisSignalDelayer.cpp  NoisTimeStretcher.cpp
src/memory/: NoisAllocator.cpp
src/parameter/: NoisParameter.cpp
src/route/: NoisCombiner.cpp  NoisMixer.cpp  NoisSplitter.cpp
src/util/: NoisSpanAllocator.cpp
tests/: CMakeLists.txt
tests/small-vector/: CMakeLists.txt
tests/small-vector/src/: Main.cpp
tests/span-allocator/: CMakeLists.txt
tests/span-allocator/src/: Main.cpp
