cmake_minimum_required(VERSION 3.28.0)

set(NOIS_TESTS_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")


#-------------------------------------------------------------------------------------------------
#	Sub-directories
#--------------------------------------------------------------------------------------------------
add_subdirectory("${NOIS_TESTS_ROOT_DIR}/small-vector")

